--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main{
+   margin: auto;
+   width: 100%;
+   max-width: 1460px; 
+}
+
+.mw-1000{
+   max-width: 1000px; 
+}
