--- a/src/screens/Articles/Installation.css
+++ b/src/screens/Articles/Installation.css
@@ -3,22 +3,45 @@
     position: relative;
 }
 
+.mtt-article .installation .split-wrap {
+    display: none;
+    margin-bottom: 20px;
+    padding-left: calc(50% - 80px);
+}
+
+.mtt-article .installation .split-wrap .split {
+    border-top: 2px solid rgb(221, 224, 223);
+    width: 150px;
+}
+
 .mtt-article .installation-wrap {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .mtt-article .installation-wrap>div {
     width: 15%;
     height: auto;
-    border-radius: 1.5rem;
-    padding: 1rem;
     cursor: pointer;
     transition: .2s ease;
+    position: relative;
+}
+
+.mtt-article .installation-wrap .link-wrap-card {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
 }
 
 .mtt-article .installation-wrap>div:hover {
     transform: translateY(-0.25rem);
+}
+
+.mtt-article .installation-wrap .card {
+    border-radius: 1.5rem;
+    padding: 1rem;
 }
 
 .mtt-article .installation-wrap .img-wrap {
@@ -55,6 +78,8 @@
 
 .mtt-article .installation-wrap .author-wrap {
     margin-top: 10px;
+    position: relative;
+    z-index: 1;
 }
 
 .mtt-article .installation-wrap .author {
@@ -74,4 +99,101 @@
     font-size: 0.65rem;
     font-weight: 1000;
     letter-spacing: 8px;
+}
+
+/*=========================REPONSIVE==========================*/
+
+@media screen and (max-width: 1536px) {
+    .mtt-article .installation-wrap>div {
+        width: 16%;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .mtt-article .installation-wrap>div:nth-child(5){
+        display: none;
+    }
+
+    .mtt-article .installation-wrap>div {
+        width: 20%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .mtt-article .installation-wrap>div {
+        width: 23%;
+    }
+
+    .mtt-article .installation .title-group {
+        position: unset;
+        transform: unset;
+        width: unset;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .mtt-article .installation .split-wrap {
+        display: block;
+    }
+
+    .mtt-article .installation-wrap .author-wrap {
+        display: none;
+    }
+
+    .mtt-article .installation-wrap .title {
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .mtt-article .installation-wrap>div:nth-child(5) {
+        display: block;
+    }
+
+    .mtt-article .installation-wrap>div {
+        width: 31%;
+    }
+
+    .mtt-article .installation-wrap>div:nth-child(4), .installation-wrap>div:nth-child(5) {
+        margin-top: 20px;
+        width: 48%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .mtt-article .installation-wrap>div {
+        display: block;
+    }
+
+    .mtt-article .installation-wrap>div:nth-child(4) {
+        display: block;
+    }
+
+    .mtt-article .installation-wrap>div:nth-child(5){
+        display: block;
+    }
+
+    .mtt-article .installation-wrap>div {
+        width: 48%;
+    }
+
+    .mtt-article .installation-wrap>div:nth-child(3), .installation-wrap>div:nth-child(4), .installation-wrap>div:nth-child(5) {
+        margin-top: 20px;
+    }
+
+    .mtt-article .installation-wrap>div:nth-child(5) {
+        width: 100%;
+    }
+
+    .mtt-article .installation-wrap>div:nth-child(5) .img-wrap {
+        position: relative;
+        width: 100%;
+        padding-top: 30%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .mtt-article .installation-wrap>div:nth-child(5) {
+        display: none;
+    }
 }
